
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int member_1; int member_0; } ;
typedef int fd_set ;


 int EXIT_FAILURE ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int TIMEOUT ;
 int close (int) ;
 int exit (int ) ;
 int fprintf (int ,char*) ;
 int perror (char*) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int stderr ;
 size_t write (int,char*,size_t) ;

size_t net_write( int fd, char * buf, size_t size )
{
        struct timeval tv = { TIMEOUT, 0 };
        fd_set wfds ;
        int ret ;

        FD_ZERO( &wfds );
        FD_SET( fd, &wfds );

        if ( (ret = select( fd+1, ((void*)0), &wfds, ((void*)0), &tv )) == -1 ) {
                perror("[-] Select");
                exit( EXIT_FAILURE );
        }
        if ( ret == 0 ) {
                close( fd );
                fprintf(stderr,"[-] Timeout\n");
                exit( EXIT_FAILURE );
        }
        if ( FD_ISSET( fd, &wfds ) )
        {
                return( write( fd, buf, size ) );
        }
        else
        {
                fprintf(stderr,"[-] Error in sending data\n");
                exit( EXIT_FAILURE );
        }
}
